# log_lib

./: CMakeLists.txt  README.md
code/: log.cpp  log.h  main.cpp
include/: utility.h
test/: main.cpp  prog
